{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1006,
  "lineage": "2f84823d-a1f6-6f93-d615-17dc02676db7",
  "resources": [
    {
      "module": "module.linux_vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/networkInterfaces/N01510487-c-vm-1-0-nic",
            "internal_domain_name_suffix": "iu5caqtu30fedhfarxzsomxtqd.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "N01510487-c-vm-ipconfig1-1-0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/publicIPAddresses/N01510487-c-vm-1-0-pip",
                "subnet_id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2/subnets/network-subnet1-assignment2"
              }
            ],
            "location": "canadacentral",
            "mac_address": "60-45-BD-5B-D7-35",
            "name": "N01510487-c-vm-1-0-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "network-rg-assignment2",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "GroupMembers": "canol.tasgin",
              "Name": "Automation Project – Assignment 2"
            },
            "virtual_machine_id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Compute/virtualMachines/N01510487-c-vm-1-0"
          },
          "dependencies": [
            "module.linux_vms.azurerm_public_ip.pip",
            "module.network.azurerm_network_security_group.network-nsg1",
            "module.network.azurerm_network_security_group.network-nsg2",
            "module.network.azurerm_subnet.network-subnet1",
            "module.network.azurerm_subnet.network-subnet2",
            "module.network.azurerm_subnet_network_security_group_association.network-subnet1-nsg-assoc",
            "module.network.azurerm_subnet_network_security_group_association.network-subnet2-nsg-assoc",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/networkInterfaces/N01510487-c-vm-1-1-nic",
            "internal_domain_name_suffix": "iu5caqtu30fedhfarxzsomxtqd.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "N01510487-c-vm-ipconfig1-1-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/publicIPAddresses/N01510487-c-vm-1-1-pip",
                "subnet_id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2/subnets/network-subnet1-assignment2"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-22-48-3E-29-C1",
            "name": "N01510487-c-vm-1-1-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "network-rg-assignment2",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "GroupMembers": "canol.tasgin",
              "Name": "Automation Project – Assignment 2"
            },
            "virtual_machine_id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Compute/virtualMachines/N01510487-c-vm-1-1"
          },
          "dependencies": [
            "module.linux_vms.azurerm_public_ip.pip",
            "module.network.azurerm_network_security_group.network-nsg1",
            "module.network.azurerm_network_security_group.network-nsg2",
            "module.network.azurerm_subnet.network-subnet1",
            "module.network.azurerm_subnet.network-subnet2",
            "module.network.azurerm_subnet_network_security_group_association.network-subnet1-nsg-assoc",
            "module.network.azurerm_subnet_network_security_group_association.network-subnet2-nsg-assoc",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vms",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/publicIPAddresses/N01510487-c-vm-1-0-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.116.62.7",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "N01510487-c-vm-1-0-pip",
            "resource_group_name": "network-rg-assignment2",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "GroupMembers": "canol.tasgin",
              "Name": "Automation Project – Assignment 2"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.network-nsg1",
            "module.network.azurerm_network_security_group.network-nsg2",
            "module.network.azurerm_subnet.network-subnet1",
            "module.network.azurerm_subnet.network-subnet2",
            "module.network.azurerm_subnet_network_security_group_association.network-subnet1-nsg-assoc",
            "module.network.azurerm_subnet_network_security_group_association.network-subnet2-nsg-assoc",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/publicIPAddresses/N01510487-c-vm-1-1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.116.62.55",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "N01510487-c-vm-1-1-pip",
            "resource_group_name": "network-rg-assignment2",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "GroupMembers": "canol.tasgin",
              "Name": "Automation Project – Assignment 2"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.network-nsg1",
            "module.network.azurerm_network_security_group.network-nsg2",
            "module.network.azurerm_subnet.network-subnet1",
            "module.network.azurerm_subnet.network-subnet2",
            "module.network.azurerm_subnet_network_security_group_association.network-subnet1-nsg-assoc",
            "module.network.azurerm_subnet_network_security_group_association.network-subnet2-nsg-assoc",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network-nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/networkSecurityGroups/network-nsg1-assignment2",
            "location": "canadacentral",
            "name": "network-nsg1-assignment2",
            "resource_group_name": "network-rg-assignment2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network-nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/networkSecurityGroups/network-nsg2-assignment2",
            "location": "canadacentral",
            "name": "network-nsg2-assignment2",
            "resource_group_name": "network-rg-assignment2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2/subnets/network-subnet1-assignment2",
            "name": "network-subnet1-assignment2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg-assignment2",
            "virtual_network_name": "network-vnet-assignment2"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2/subnets/network-subnet2-assignment2",
            "name": "network-subnet2-assignment2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg-assignment2",
            "virtual_network_name": "network-vnet-assignment2"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network-subnet1-nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2/subnets/network-subnet1-assignment2",
            "network_security_group_id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/networkSecurityGroups/network-nsg1-assignment2",
            "subnet_id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2/subnets/network-subnet1-assignment2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.network-nsg1",
            "module.network.azurerm_subnet.network-subnet1",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network-subnet2-nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2/subnets/network-subnet2-assignment2",
            "network_security_group_id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/networkSecurityGroups/network-nsg2-assignment2",
            "subnet_id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2/subnets/network-subnet2-assignment2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.network-nsg2",
            "module.network.azurerm_subnet.network-subnet2",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "42203e45-ee74-418a-9ca0-8df32732f383",
            "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2",
            "location": "canadacentral",
            "name": "network-vnet-assignment2",
            "resource_group_name": "network-rg-assignment2",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2/subnets/network-subnet1-assignment2",
                "name": "network-subnet1-assignment2",
                "security_group": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/networkSecurityGroups/network-nsg1-assignment2"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/virtualNetworks/network-vnet-assignment2/subnets/network-subnet2-assignment2",
                "name": "network-subnet2-assignment2",
                "security_group": "/subscriptions/864ced2f-51a8-415e-8fce-9641427bf1e7/resourceGroups/network-rg-assignment2/providers/Microsoft.Network/networkSecurityGroups/network-nsg2-assignment2"
              }
            ]
          },
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.network_rg"
          ]
        }
      ]
    }
  ]
}